--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "gulpfile.js",
   "dependencies": {
+    "angular-touch": "X.Y.Z",
+    "angular-ui-bootstrap": "^2.5.6",
     "browser-sync": "^2.18.13",
     "countup.js": "^1.9.3",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-plumber": "^1.1.0",
-    "gulp-sass": "^3.1.0"
+    "gulp-sass": "^3.1.0",
+    "jquery-datetimepicker": "^2.5.20"
   },
   "devDependencies": {
     "gulp-clean-css": "^3.9.0"
